fixed about me img spacing 'centered' added padding to 'about' div

--- a/style.css
+++ b/style.css
@@ -158,11 +158,13 @@
      background-color: #dddddd;
      max-height: 100%;
      min-height: 100vh;
+     padding-top: 30px;
  }
 
  #about p {
      color: #333;
      font-weight: bold;
+     font-size: 1vw;
      line-height: 2;
      padding-top: 10px;
      padding-bottom: 10px;
@@ -192,14 +194,21 @@
  }
 
  .responsive {
-     width: 90%;
+     width: 100%;
      height: auto;
-     margin: 0 auto;
-     margin-left: 20px;
-     margin-top: 30px;
+     margin: 0;
+     padding-left: 15px;
+     border: 0;
+
  }
 
- row {
-     margin: 0 auto;
- }
+
+
+ /* --------------------------------Custom Media Queries-----------------------*/
+
+ @media only screen and (max-width: 600px) {
+  #about p {
+    font-size: 10px;
+  }
+}
 
